# RTAKRecorder

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/rtakrecorder/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Codec2Binding.cpp
app/src/main/cpp/codec2/: codec2.h
app/src/main/java/com/example/rtakrecorder/: Codec2.java  MainActivity.kt  PCMRecorder.kt
app/src/main/java/com/example/rtakrecorder/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/rtakrecorder/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
